Bug 1845104 Various small style bugs
- Chervons missing in inbox block, conflicting with text-small.
- People list h4 wrapping portfolio list, moving it out.
- dashboard editbuttons placement dependent on h1/h2 above, put in
  better conditions so it doesn't need it at all.
- Plans chervon too far in, moved it out as no longer has details.

behatnotneeded

--- a/htdocs/theme/raw/sass/_custom.scss
+++ b/htdocs/theme/raw/sass/_custom.scss
@@ -32,8 +32,12 @@
     }
     a[data-toggle="collapse"] .collapse-indicator,
     a[data-toggle="collapse"].collapsed .collapse-indicator {
-        margin-right: 90px;
+        margin-right: 10px;
         margin-top: 17px;
+    }
+    & .btn-group + a[data-toggle="collapse"] .collapse-indicator,
+    & .btn-group + a[data-toggle="collapse"].collapsed .collapse-indicator {
+        margin-right: 90px;
     }
     .plan-task-icon {
         vertical-align: top;
