--- a/htdocs/theme/raw/sass/components/_list-group.scss
+++ b/htdocs/theme/raw/sass/components/_list-group.scss
@@ -95,6 +95,10 @@
     .postedon {
         font-family: $font-family-base;
     }
+
+    .text-small {
+        font-family: $font-family-base;
+    }
 }
 
 .list-group-item h4.list-group-item-heading {
