--- a/htdocs/theme/raw/sass/typography/_text.scss
+++ b/htdocs/theme/raw/sass/typography/_text.scss
@@ -22,7 +22,6 @@
 
 .text-small {
     font-size: $font-size-sm;
-    font-family: $font-family-base;
 }
 
 .text-tiny {
